ingress/tomcat-ingress-deployment.yml
apiVersion: apps/v1     
kind: Deployment      
metadata:
  name: tomcat-deployment
  labels:              
    app: tomcat       
spec:
  replicas: 1           
  strategy:             
    type: RollingUpdate 
    rollingUpdate:
   #  maxSurge: 1      
   #  maxUnavailable: 0 
  selector:            
    matchLabels:
      app: tomcat       
  template:             
    metadata:
      name: tomcat-2
      labels: 
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: tomcat:9.0
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-cluster-ip
spec:
  selector:                             
    app: tomcat                   
  ports:
    - name: tomcat-pod-port
      protocol: TCP                        
      port: 8084                
      targetPort: 8080
