ingress/tomcat-ingress-nginx-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /tomcat
        pathType: Prefix
        backend:
          service:
            name: tomcat-cluster-ip
            port:
              number: 8084
